# pyomo

./: .Xauthority  .appveyor.yml  .bash_history  .codecov.yml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .jenkins.sh  .pre-commit-config.yaml  .profile  .readthedocs.yaml  .readthedocs.yml  .readthedocs_requirements.txt  .test.py.swp  .travis.yml  .travis_install_gams.sh  .travis_install_gams_api.sh  .viminfo  AUTHORS.txt  CHANGELOG.md  CHANGELOG.txt  CITATION.cff  CODE_OF_CONDUCT.md  CODE_REVIEW_CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOE_SYMBOLIC_PR_NOTES.md  LICENSE.md  LICENSE.txt  LU factorization with Pivoting  MANIFEST.in  README.md  README.txt  RELEASE.md  RELEASE.txt  Untitled.ipynb  appveyor.yml  codecov.yml  conftest.py  (+8 more)
.coin-or/: projDesc.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: README.md  debug_fast_test.yml  linux_py27_pandas.yml  mac_python_matrix_test.yml  macos_python_matrix.yml  master_push_test.yml  mpi_matrix_test.patch  mpi_matrix_test.yml  nosetests_win_py_3.8.yml  parallel_tests.yml  pr_master_test.yml  push_branch_linux_test.yml  push_branch_test.yml  push_branch_unified_test.yml  push_branch_unix_test.patch  push_branch_unix_test.yml  push_branch_win_test.patch  push_branch_win_test.yml  push_master_test.yml  pythonpackage.yml  release_wheel_creation.yml  summarize_dependencies.yml  test_branches.yml  test_pr_and_main.yml  typos.toml  ubuntu_python_matrix.yml  ubuntu_python_matrix_test.yml  ubuntu_single_control_test.yml  unix_python_matrix_test.yml  url_check.yml  validate.sh  win_cmd_python_matrix_test.yml  win_pwsh_python_matrix_test.yml  win_python_matrix.yml  win_python_matrix_test.yml
.ssh/: authorized_keys  config  github  github.pub  known_hosts
ATTIC/openopt/: FuncDesignerExt.py  __init__.py  func_designer.py
ATTIC/repn/: ampl_repn.py  canonical_repn.py  test_canonical.py
admin/: __init__.py  config.ini  driver.py  jenkins.py  zipbuilder
admin/performance/: compare_components.py  convert_perf.py  expr_perf.py  simple.py  solver_perf.py
doc/: CHANGELOG.txt  README.txt  setup.py
doc/Archive/: README.md  conf.py  index.rst
doc/Design/: Makefile.local  PyomoDesign.html  components.txt  flatten.txt  intro.txt
doc/OnlineDocs/: .gitignore  Makefile  README.md  README.txt  bar.rst  bibliography.rst  citing-pyomo.rst  citing_pyomo.rst  code.rst  conf.py  contribution_guide.rst  docutils.conf  errors.rst  foo.rst  index.rst  installation.rst  make.bat  principles.rst  pyomo_contrib.rst  related_packages.rst  solving_pyomo_models.rst  tutorial_examples.rst  working_models.rst
doc/docbook/: NEWS.xml  REVISION  index.html  log
doc/pysp/: coopr.bib  pyspbody.tex
examples/NestedDecomp/: GTEP_scenario_tree.py  GTEPblock.py  GTEPblock_SDDP.py  GTEPdata_SDDP.py  MPLP.py  NestedDecomp.py  SDDP.py
examples/bilevel/: README.txt  bard_5_1_1.py  blp_example1.py  bqp_example1.py  example1.py  example2.py  example3.py  interdiction.py  pmedian.py  sensor.py  sensor_1_level.py  shortest.py  shortest_reformulation.py  t1.py  t2.py  t5.py  t5a.py  test1.py  testall.py
examples/core/: block1.py  integrality1.py  integrality2.py  simple.py  t1.py  t2.py  t5.py
examples/dae/: HIV_Transmission.py  HIV_Transmission_discrete.py  Heat_Conduction.py  Optimal_Control.py  PDE_example.py  Parameter_Estimation.py  Path_Constraint.py  README.txt  ReactionKinetics.py  car_example.py  disease_DAE.py  distill_DAE.py  dynamic_scheduling.py  laplace_BVP.py  m_sipopt_HIV_Transmission.py  param.py  run_HIV_Transmission.py  run_Optimal_Control.py  run_Parameter_Estimation.py  run_Path_Constraint.py  run_disease.py  run_distill.py  run_sipopt.py  run_sipopt_HIV.py  run_sipopt_param.py  run_sipopt_test.py  run_stochpdegas_automatic.py  scipy_simulator_example.py  simulator_dae_example.py  simulator_dae_multindex_example.py  simulator_ode_example.py  simulator_ode_multindex_example.py  stochpdegas_automatic.py  substitution.py  test_sipopt_HIV.py  toyModel.py
examples/gdp/: ConstrainedLayout.py  README.txt  batchProcessing.py  data_set.py  disease_model.py  jobshop-nodisjuncts.py  jobshop.py  medTermPurchasing_Literal.py  nonlinearGDP.py  simple1.py  simple2.py  simple3.py  small_process.py  stickies.py  stripPacking.py
examples/kernel/: blocks.py  conic.py  conic_constraints.py  constraints.py  containers.py  expressions.py  objectives.py  parameters.py  piecewise_functions.py  piecewise_nd_functions.py  special_ordered_sets.py  suffixes.py  (+1 more)
pyomo/: __future__.py  __init__.py  future.py
pyomo/contrib/ampl_function_demo/src/: CMakeLists.txt  FindASL.cmake  functions.c  functions.h
pyomo/contrib/asl_functions_lib/src/: CMakeLists.txt
pyomo/contrib/aslfunctions/src/: CMakeLists.txt  functions.cpp
pyomo/contrib/cspline_external/src/: CMakeLists.txt  FindASL.cmake  functions.cpp
pyomo/contrib/pynumero/cmake/: CMakeLists.txt  README.md
pyomo/contrib/pynumero/cmake/asl_interface/: CMakeLists.txt
pyomo/contrib/pynumero/cmake/asl_interface/src/: AmplInterface.cpp  AmplInterface.hpp  AsserUtils.hpp  AssertUtils.hpp  fmemopen.h
pyomo/contrib/pynumero/cmake/hsl_interface/: CMakeLists.txt
pyomo/contrib/pynumero/cmake/hsl_interface/src/: ma27Interface.cpp  ma27Interface.hpp
pyomo/contrib/pynumero/cmake/sparse_utils/: CMakeLists.txt
pyomo/contrib/pynumero/cmake/sparse_utils/src/: SparseUtils.cpp  SparseUtils.hpp
pyomo/contrib/pynumero/cmake/tests/: CMakeLists.txt  simple_nlp.nl
pyomo/contrib/pynumero/cmake/tests/src/: simple_test.cpp
pyomo/contrib/pynumero/src/: AmplInterface.cpp  AmplInterface.hpp  AssertUtils.hpp  CMakeLists.txt  amplmp-3.1.0.patch  ma27Interface.c  ma27Interface.cpp  ma57Interface.c  ma57Interface.cpp
pyomo/contrib/pynumero/src/hsl_interface/: CMakeLists.txt  Makefile  Makefile.in  ma57Interface.c
pyomo/contrib/pynumero/src/tests/: CMakeLists.txt  simple_test.cpp
scripts/: __init__.py  get-pyomo-extras.py  get_pyomo.py  get_pyomo_extras.py  pyomo_install  pyomo_install.py  pyomo_uninstall.py
(+8063 files in other folders)
