[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal=1

[tool:pytest]
markers =
    nightly: marks tests as nightly (Current default for unmarked tests)
    smoke: marks tests as smoke (Current default for unmarked tests)
    expensive: marks tests as expensive
    mpi: marks tests that require MPI
    neos: marks tests that require NEOS server connections
    book: marks tests from the Pyomo book
    performance: marks performance tests
    long: marks long performance tests
    short: marks short performance tests
    devel: marks developer-created performance tests
    nl: marks nl tests
    lp: marks lp tests
    gams: marks gams tests
    bar: marks bar tests
