[metadata]
license_files = LICENSE.md

[tool:pytest]
filterwarnings = ignore::RuntimeWarning
junit_family = xunit2
markers =
    default: mark a test that should always run by default
    expensive: marks tests as expensive
    mpi: marks tests that require MPI
    neos: marks tests that require NEOS server connections
    importtest: marks tests that checks for warnings when importing modules
    book: marks tests from the Pyomo book
    performance: marks performance tests
    long: marks long performance tests
    short: marks short performance tests
    devel: marks developer-created performance tests
    nl: marks nl tests
    lp: marks lp tests
    gams: marks gams tests
    bar: marks bar tests
    builders: tests that should be run when testing custom (extension) builders